--- a/PS2LS/ps2ls/Properties/Resources.resx
+++ b/PS2LS/ps2ls/Properties/Resources.resx
@@ -280,4 +280,7 @@
   <data name="arrow_right" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arrow-right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="document_plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\document-plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
