--- a/PS2LS/ps2ls/Properties/Resources.resx
+++ b/PS2LS/ps2ls/Properties/Resources.resx
@@ -271,9 +271,6 @@
   <data name="robot" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\robot.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="materials_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\materials_3.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
-  </data>
   <data name="arrow_left" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arrow-left.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -282,5 +279,11 @@
   </data>
   <data name="document_plus" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\document-plus.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sphere_wire_occluder" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sphere-wire-occluder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="materials_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\materials_3.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
 </root>
