--- a/PS2LS/ps2ls/Properties/Resources.resx
+++ b/PS2LS/ps2ls/Properties/Resources.resx
@@ -295,4 +295,7 @@
   <data name="BastionAtDawn" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BastionAtDawn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DocumentWrite" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\DocumentWrite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
